@@ -7791,4 +7791,14 @@ Matched, but offsets vector is too small to show all matches
     aaa 
 No match
 
+/()()a+/O=
+    aaa\D
+** Show all captures ignored after DFA matching
+ 0: aaa
+ 1: aa
+ 2: a
+    a\D
+** Show all captures ignored after DFA matching
+ 0: a
+
 /-- End of testinput8 --/
